Fix bug in issue edit on small resolutions

--- a/stylesheets/application.less
+++ b/stylesheets/application.less
@@ -666,6 +666,9 @@ table.list td, fieldset#filters td.add-filter {
 	vertical-align: middle;
 }
 
+#attachments_fields span {
+	white-space: normal;
+}
 
 /* Activity */
 
